RH-2008-12-10-0: Enhancem.:  o hedeby checktree checks after each test that
                               no cluster has running jobs
                             o the method check_hedeby_default_resources uses
                               wait_for_resource_info to check the resources. This
                               solves the problem with temporay static resources
                 Review:     AF,TB

EB-2008-12-10-0: Enhancemn.: - Added several tests for JSV
                 Review:     MD

LP-2008-12-09-0: Enhacem.:   Removed -no-jmx flag
                 Review:     JO

CR-2008-12-08-1: Bugfix:     Fixed TS admin user mode installation
                             (install GE without having root access)
                 Review:     AF

JG-2008-12-08-0: Enhancem.:  Added test for issue 2822. It turned out to not be
                             a SGE bug, but the scenario (tightly integrated
                             job with tasks in multiple queue instances per
                             host) was not yet tested in testsuite.
                 Review:     MD

CR-2008-12-08-0: Bugfix:     Fixed testsuite test 2254 which did not wait
                             for a jobstart
                 Review:     JG

RH-2008-12-05-1: Bugfix:     Hedeby: timeout for junit tests set to 5 minutes
                
RH-2008-12-05-0: Bugfix:     With checkin RH-2008-12-03-0 starting testsuite
                             with hedeby checktree was no longer possible. 
                             Never use the configuration of an additional checktree
                             in an init level function.
                 Review:     TB

                             
HP-2008-12-04-0: Bugfix:     Fixed wrong error messages in performance/commlib test
                 Review:     CR

EB-2008-12-04-0: Enhancemn.: - Added new test for which tests qalter in
                               combination with JSV on server side