@@ -1,3 +1,8 @@
+JG-2008-12-11-0: Enhancem.:  added test scenario for IZ 2393, check_function
+                             tight_integration_massive_nfs_tmpdir in 
+                             functional/tight_integration test
+                 Review:     RD
+
 RH-2008-12-10-0: Enhancem.:  o hedeby checktree checks after each test that
                                no cluster has running jobs
                              o the method check_hedeby_default_resources uses
